syntax = "proto3";

package message;

service Message {
  rpc Send (SendMessageRequest) returns (SendMessageResponse) {}
  rpc Read (ReadMessageRequest) returns (stream ReadMessageResponse) {}
}

message SendMessageRequest {
  string key = 1;
  bytes value = 2;
}

message SendMessageResponse {}

message ReadMessageRequest {
  string key = 1;
  uint64 offset = 2;
}

message ReadMessageResponse {
  string key = 1;
  bytes value = 2;
}
